hide overflow-x to fix mobile bug where img isnt hidden

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,8 @@ animation: backgroundChange 10s ease infinite;
 
 */
 
+overflow-x: hidden;
+
 }
 
 @-webkit-keyframes backgroundChange {
